image overflow fixed

--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,7 +7,21 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
+    overflow: hidden;
 
+    &:hover {
+        cursor: pointer;
+      
+        & .background-image {
+          transform: scale(1.3);
+          transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+        }
+      
+        & .content {
+          opacity: 0.9;
+        }
+      }
+      
     &.large {
         height: 380px;
     }
@@ -18,21 +32,7 @@
 
     &:last-child {
         margin-left: 7.5px;
-    }
-
-    &:hover {
-        cursor: pointer;
-      
-        & .background-image {
-          transform: scale(1.1);
-          transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-        }
-      
-        & .content {
-          opacity: 0.9;
-        }
-      }
-      
+    }      
 
     .background-image {
         width: 100%;
